src/test/deca/syntax/valid/objet_cast_instanceof.deca

class A { }
class B extends A { }

{
    A a;
    a = new B();
    if(a instanceof B){
        println("ok");
    }
    a = (A)(a);
}
