src/test/deca/syntax/invalid/decl_inblock.deca

class A { }
class B extends A { 
    int x; 
}

{
    A a;
    a = new B();

    if (a instanceof B) {
        B b;
    }
}
